--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hairis",
   "private": false,
-  "homepage": "https://eyeriss42.github.io/hairiseveryfilm/",
+  "homepage": "https://github.com/eyeriss42/hairiseveryfilm",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
